apps/base/nodejs/users-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dso-gke-nodejs
  labels:
    name: dso-gke-nodejs
spec:
  rules:
  - http:
      paths:
          - backend:
              service:
                name: dso-gke-nodejs
                port:
                  number: 80
            path: /nodejs      
            pathType: ImplementationSpecific
